# laatoo

./: .build-tools.cson  .directory  .dockerignore  .gitignore  .gitmodules  .laatoomodulesrc  Dockerfile  Dockerfile.gonightly  Dockerfile.laatoo  Dockerfile.laatoobase  Dockerfile.laatoobuilder  Dockerfile.laatoocompiler  Dockerfile.laatoodevel  Dockerfile.laatooservicescompiler  Dockerfile.laatootest  Dockerfile.modulebuilder  Dockerfile.nodebuilder  Dockerfile.pluginbuilder  Dockerfile.rustwasmsupport  Dockerfile.uilibrarybuilder  bash  bower.json  build.sh  build.sh.bak  builddeb.sh  builddockerimages.sh  buildmodule.sh  buildrunnerdockers.sh  buildservices.sh  buildwithdocker.sh  cleanimages.sh  compilelaatoo.sh  compileservices.sh  copyservices.sh  cpplibs.conf  getpackages.sh  getwasmpackages.sh  glide.yaml  go.mod  go.sum  (+16 more)
cli/: go.mod  go.sum
config/: config.json  configuration.go  genericconfig.go
constants/: constants.go
ctx/: context.go
data/: dataadapter.go  gaedataservice_get.go  gaedatastorefactory.go  mongodataserver_get.go  mongodataservice.go
designer/: .gitignore  .laatoomodulesrc  Dockercomposedev-windows.yml  Dockercomposedev.yml  Dockerfile.designer  Dockerfile.designertest  Dockerfile.ekanite  builddesigner.sh  copylatestmodules.sh  copymodules_windows.sh  makedesignermodules.sh  makedockerimage.sh  modules.list  rundesigner.bat  rundesigner.sh
development/: app.yaml  common.go  publish_dev.json  publish_prod.json  server.go  server.json
docker/: Dockerfile
forcaching/: go.mod  go.sum  mod.go
laatoo/: .build-tools.cson  .directory  bower.json  designer_prod.json  laatooapp.go  laatooserver.go  laatoostandalone.go  server.json
laatooactions/: actions.go  errorhandler.go
laatooapp/: googleapp.go
laatooauthentication/: authtype.go  baseauth.go  baseauthmodule.go  config.go  defaultrole.go  defaultuser.go  errorhandler.go  events.go  ginauth.go  keyauth.go  localauth.go  mailer.go  middleware.go  oauth.go  oauth_appengine.go  oauth_standalone.go  permissionservice.go  registrationservice.go  roleservice.go  roleview.go  securityservice.go  userauthorization.go  userservice.go  userview.go
laatoocache/: appenginecache.go  memorycacheservice.go  rediscacheservice.go
laatoocodegen/: codegenservice.go  errorhandler.go
laatoocore/: apiauth.go  application.go  authmiddleware.go  authorization.go  context.go  environment.go  errorhandler.go  events.go  methodsregistry.go  objectsfactory.go  permissions.go  pubsub.go  rolepermissions.go  router.go  server.go  server_appengine.go  server_standalone.go  servercommon.go  servicefactory.go
laatoodata/: datastoredataservice.go  errorhandler.go  mongodataservice.go  refops.go
laatoodesigner/: designerservice.go
laatooentities/: entityauthorization.go  entityservice.go  errorhandler.go  view_entities.go
laatoofiles/: errorhandler.go  fileservice.go  googlestorage.go
laatoologin/: errorhandler.go  loginservice.go
laatoopage/: bower.json  karma.conf.js  package.json
laatoopages/: errorhandler.go  page.go  pageservice.go
laatoopubsub/: gaepubsub.go  pubsubservice.go  redispubsubservice.go
laatoormi/: errorhandler.go  rmiservice.go
laatoostatic/: errorhandler.go  imageservice.go  staticfileservice.go
laatooview/: errorhandler.go  viewservice.go
libraries/: .directory
mehfilpublish/: common.go  mehfil_rsa  mehfil_rsa.pub  mykey.pem  publish_dev.json  publish_prod.json  server.go  server.json
middleware/: checkcreationuser.go  dataauthorization.go  manifest.go  ownaccount.go  permission.go
modulesrepository/: .gitignore  .laatoomodulesrc  Dockerfile.apptest
proxy/: main.go
pubsub/: pubsubfactory.go
raminderapp/: .laatoomodulesrc  Dockercomposedev.yml  Dockerfile.apptest  copylatestmodules.sh  customers.csv  empclass.csv  modules.list  supplier.csv
security/: common.go  dbregistrationservice.go  (+2 more)
services/web/jsui/server/go/lib/binaryenmerge/: CMakeCache.txt  CMakeLists.txt  Makefile  bridge.cpp  bridge.h  cmake_install.cmake
services/web/laatoobrowser/ui/rust/: Cargo.toml
services/web/laatoobrowser/ui/rust/src/: browser.rs  httpcall.rs  lib.rs  platform.rs
src/: go.mod  (+1 more)
(+3484 files in other folders)
