[package]
name = "laatoobrowser"
version = "0.1.0"
authors = ["Mandeep Singh Brar <mandeep@virsainfomedia.com>"]

[profile.release]
debug = false
lto = true

[dependencies]
wasm-bindgen = {path = "/go/src/laatoo/sdk/client/rust/wasm-bindgen"}
futures = "0.1.20"
js-sys = { path = "/go/src/laatoo/sdk/client/rust/wasm-bindgen/crates/js-sys" }
web-sys = { path = "/go/src/laatoo/sdk/client/rust/wasm-bindgen/crates/web-sys" }
laatoocore = { path = "/go/src/laatoo/sdk/client/rust/laatoocore" }
wasm-bindgen-futures = "0.2.19"



[lib]
crate-type = ["cdylib"]
