[package]
name = "laatoobrowser"
version = "0.1.0"
authors = ["Mandeep Singh Brar <mandeep@virsainfomedia.com>"]

[profile.release]
debug = false
lto = true

[dependencies]
futures = "0.1.20"
wasm-bindgen = {path = "/go/src/laatoo/sdk/client/rust/wasm-bindgen", features = ["serde-serialize"] }
js-sys = { path = "/go/src/laatoo/sdk/client/rust/wasm-bindgen/crates/js-sys" }
laatoocore = { path = "/go/src/laatoo/sdk/client/rust/laatoocore" }
wasm-bindgen-futures = { path = "/go/src/laatoo/sdk/client/rust/wasm-bindgen/crates/futures" }
serde = "^1.0.59"
serde_derive = "^1.0.59"


[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
path = "/go/src/laatoo/sdk/client/rust/wasm-bindgen/crates/web-sys"

