[package]
name = "laatoobrowser"
version = "0.1.0"
authors = ["Mandeep Singh Brar <mandeep@virsainfomedia.com>"]

[profile.release]
debug = false
lto = true

[dependencies]
futures = "0.1.20"
wasm-bindgen = "^0.2.23"
js-sys = "0.3.0"
wasm-bindgen-futures = "0.3.0"
serde = "^1.0.59"
serde_derive = "^1.0.59"
laatoocore = { path = "/go/src/laatoo/sdk/client/rust/laatoocore" }

[lib]
crate-type = ["cdylib"]


[dependencies.web-sys]
version = "^0.3.0"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

